<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.brian.zaplanujwyjazd.AddPlaceActivity"
        android:padding="20dp">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:inputType="text"
            android:hint="@string/name"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/latlng_linear"
            android:layout_below="@id/name_edit_text">

            <EditText
                android:id="@+id/latitude_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/latitude"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/longitude_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/longitude"
                android:layout_weight="1"/>
        </LinearLayout>


        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/latlng_linear"
            android:inputType="text"
            android:hint="@string/description"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_edit_text"
            android:layout_centerHorizontal="true"
            android:text="@string/add"
            android:layout_marginTop="30dp"
            android:onClick="addPlaceToDatabase"/>

    </RelativeLayout>

</ScrollView>