<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".FindPlaceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_radious"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/radious"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/radious_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:hint="@string/enter_radious"
            android:layout_weight="1"/>

    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/layout_switcher"
        android:layout_below="@id/layout_radious"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_or_select_categories"
        android:textSize="15sp"/>

    <ViewSwitcher
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_switcher"
        android:layout_below="@id/layout_switcher"
        android:inAnimation="@android:anim/slide_in_left">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_category_with_spinner"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/category"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/select_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawSelectorOnTop="true"
                android:entries="@array/spinner_category"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_category_with_editText"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/category"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/select_category_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/enter_keywords"/>

        </LinearLayout>

    </ViewSwitcher>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/view_switcher"
        android:id="@+id/layout_checbkox"
        android:layout_marginTop="10dp">


        <CheckBox
            android:id="@+id/open_now_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_now"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_find_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:onClick="onClick"
            android:layout_weight="1"/>


    </LinearLayout>

    <TextView
        android:id="@+id/select_place_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_checbkox"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/found_places"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <ListView
        android:id="@+id/found_places_list"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/select_place_text_view"
        android:choiceMode="singleChoice"
        android:listSelector="@color/colorAccent"
        android:fadeScrollbars="false"/>

    <Button
        android:id="@+id/button_select_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/found_places_list"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/add_place" />

</RelativeLayout>