<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    tools:context="com.brian.zaplanujwyjazd.PlacesListActivity">

    <TextView
        android:id="@+id/list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/selected_places"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/selected_places_list"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/list_title"
        android:fadeScrollbars="false"/>

    <LinearLayout
        android:id="@+id/LinearWithButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/add_place" />

        <Button
            android:id="@+id/button_find_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/find_route" />

    </LinearLayout>

</RelativeLayout>
