<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    tools:context="com.brian.zaplanujwyjazd.SelectPlaceActivity">

    <GridLayout
        android:id="@+id/GridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:text="@string/select_category"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:text="@string/weight_without_space"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/select_category_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2" />

        <Spinner
            android:id="@+id/select_weight_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:entries="@array/spinner_weight"
            android:gravity="fill_horizontal" />

    </GridLayout>

    <TextView
        android:id="@+id/select_place_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/GridLayout"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/select_place"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <ListView
        android:id="@+id/found_places_list"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/select_place_text_view"
        android:choiceMode="singleChoice"
        android:listSelector="@color/colorAccent"
        android:fadeScrollbars="false"/>

    <Button
        android:id="@+id/button_select_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="onClick"
        android:text="@string/add_place" />

</RelativeLayout>
